# ytdlp-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/en/: README.md
docs/zh-TW/: README.md
src/ytdlp_bot/: __init__.py  bootstrap.py  config.py  main.py
src/ytdlp_bot/application/: admin_service.py  artifact_access.py  authorization.py  capacity_eviction.py  capacity_publish.py  cleanup.py  command_service.py  delivery.py  dispatcher.py  job_service.py  orchestrator.py  playlist.py  progress_reporter.py  url_safety.py
src/ytdlp_bot/domain/: __init__.py  commands.py  enums.py  errors.py  format_policy.py  identity.py  jobs.py  locale.py  network_policy.py  progress.py  settings.py  (+1 more)
tests/architecture/: test_dependency_rules.py
tests/contract/: test_platform_adapters.py  test_port_fakes.py
tests/deployment/: test_ops_surface.py
tests/fakes/: __init__.py  leases.py  media.py  network.py  platform.py  repositories.py  storage.py  system.py
tests/integration/: test_bootstrap_composition.py  test_cancel_fail_playlist.py  test_cleanup_recovery.py  test_cln_crash_points.py  test_download_http.py  test_end_to_end_single_item.py  test_process_worker.py  test_publish_service.py  test_sqlite_admin_confirmations.py  test_sqlite_capacity.py  test_sqlite_connection.py  test_sqlite_migrations.py  test_sqlite_repos.py  test_worker_single_item.py
tests/security/: test_canaries.py  test_ssrf_and_tokens.py
tests/unit/: test_access_denials.py  test_access_modes_ac.py  test_admin_job_artifact.py  test_admin_service.py  test_archive_ffmpeg.py  test_archive_names.py  test_auth_net_format.py  test_capacity.py  test_capacity_eviction_order.py  test_capacity_eviction_service.py  test_cleanup_runner.py  test_command_menu.py  test_config.py  test_delivery_url_and_path.py  test_discord_six_commands.py  test_dispatcher.py  test_format_and_capacity_ac.py  test_help_roles.py  test_job_command_flow.py  test_local_store_containment.py  test_network_adapters.py  test_platform_messages.py  test_playlist_orchestrator.py  test_ranges_and_headers.py  test_readiness_egress.py  test_redaction_and_metrics.py  test_signed_tokens.py  test_ytd_ffm_prg.py
(+46 files in other folders)
